--- a/index.html
+++ b/index.html
@@ -88,10 +88,19 @@
                 
                     <h3>Categorias</h3>
 
-                    <a class="solidBlack" href="">Jogos</a>
-                    <a class="solidBlack" href="">Celulares</a>
-                    <a  class="solidBlack"href="">Informática</a>
-                    <a  class="solidBlack"href="">Eletrônicos</a>
+                    <a href="">Jogos</a>
+
+                    <br>
+
+                    <a href="">Celulares</a>
+
+                    <br>
+
+                    <a href="">Informática</a>
+
+                    <br>
+
+                    <a href="">Eletrônicos</a>
 
                 </div>
 
